--- a/templates/main-landing.html
+++ b/templates/main-landing.html
@@ -41,7 +41,7 @@
 				<div class='head-box text-center'>
 					<div class='vertical-middle'>
 						<span class='color-yellow d-block '>{{selected_cab.cartype}}</span>
-						<span class='color-gery d-block'>{{ 'Toyota etios, tata indigo, maruti dezire.' | langTranslate: appConvertedLang['Toyota_etios_tata_indigo_maruti_dezire'] }}</span>
+						<span class='color-gery d-block'>ETA {{ randomno() }} Mins</span>
 					</div>
 				</div>
 			
@@ -65,7 +65,7 @@
 						</div>
 						<div class="item-rate col col-33 no-border">
 							<div class='vertical-middle'>
-								<p class='color-gery'><b><span class='color-yellow f-size-20'>₹ </span>1/min</b></p>
+								<p class='color-gery'><b><span class='color-yellow f-size-20'>₹ </span>1.5/min</b></p>
 								<p class='color-gery'>{{ 'Ride time rate' | langTranslate: appConvertedLang['Ridetime_rate'] }}</p>
 							</div>
 						</div>
@@ -79,7 +79,7 @@
 					
             <div class="row no-padding text-center ">
                 <div class="col col-25" ng-class="{active_cab : active_cab == $index }" ng-click='clicked_item($index)' ng-repeat="cab in cabs">
-                    <div class="col color-yellow">{{cab.cartype | limitTo:7 }}<span ng-show='cab.cartype.length > 7' >..</span></div>
+                    <div class="col color-yellow">{{cab.cartype | limitTo:7 }}<span ng-show='cab.cartype.length > 20' >..</span></div>
                     <img ng-src='img/{{cab.cartype}}.png' err-SRC="img/Sedan.png" style='width: 50px' />
                     <!-- <div class="col color-gery">{{day.number}}</div> -->
                     
