--- a/templates/menu.html
+++ b/templates/menu.html
@@ -69,12 +69,11 @@
 							Payments
 						<i class="icon ion-ios-arrow-forward  f-size-25 color-d-gery"></i>
 				  </a>
-				  -->
-				 <a menu-close mainmenu  ng-click='promotion()' class="item item-icon-left item-icon-right color-gery no-border " href="#">
+				 <a class="item item-icon-left item-icon-right color-gery no-border " href="#">
 					<i class="icon ion-pricetags f-size-25 color-d-gery"></i>
 					Offers & Free Rides
 					<i class="icon ion-ios-arrow-forward f-size-25 color-d-gery"></i>
-				  </a>
+				  </a> -->
 					
 				</div>
 			</div>
