--- a/templates/main-landing.html
+++ b/templates/main-landing.html
@@ -97,8 +97,8 @@
 		</div> -->
 		
 		<div class='footer-box bg-dark color-yellow' ng-show='pop_status == true'>
-			<div class='w-50-p pull-left my-button h-100-p text-center border-r-yellow'  ng-click='cancel()' >{{ 'Cancel' | langTranslate: appConvertedLang['Cancel'] }}</div>
-			<div class='w-50-p pull-left my-button h-100-p text-center'  ng-click='book()'>{{ 'Book' | langTranslate: appConvertedLang['Book'] }}</div>
+			<div class='w-100-p my-button h-100-p text-center border-r-yellow'  ng-click='cancel()' >{{ 'Cancel' | langTranslate: appConvertedLang['Cancel'] }}</div>
+			<div class='w-100-p my-button h-100-p text-center'  ng-click='book()'>{{ 'Reservar VAN' | langTranslate: appConvertedLang['Book'] }}</div>
 		</div>
 		
 	</ion-footer-bar>
