--- a/templates/landing.html
+++ b/templates/landing.html
@@ -11,7 +11,7 @@
 						<input ng-click='sign_up()' id='signup-redirect-btn'  class='btn bg-yellow border-white' type='button' value="{{ 'New user ? Sign Up now !' | langTranslate: appConvertedLang['Newuser_SignUp_now'] }}" /></br>
 						
 						<input ng-click='show_login1()' id='signIn-redirect-btn'  class='btn bg-white' type='button' value="{{ 'SIGN IN' | langTranslate: appConvertedLang['SIGN_IN'] }}" /> </br>
-						<a class='a m-top-10' href=''>{{ 'Forgot Password?' | langTranslate: appConvertedLang['Forgot_Password'] }}</a>
+						<a class='a m-top-10' href=''>{{ 'Olvidaste la clave?' | langTranslate: appConvertedLang['Forgot_Password'] }}</a>
 					</div>
 				</div>
 				<div id='sign-in-with' class='text-center'>
@@ -19,7 +19,7 @@
 					
 						<div class='white-line'></div>
 						<div  class='line-title text-center' >
-							<span class='bg-yellow'>{{ 'Or sign In with' | langTranslate: appConvertedLang['Or_sign_In_with'] }}</span>
+							<span class='bg-yellow'>{{ 'O ingresa usando' | langTranslate: appConvertedLang['Or_sign_In_with'] }}</span>
 						</div>
 						
 						<a ng-click="facebookLogin()"><img src='img/icons/fb.png' /></a>
@@ -29,6 +29,6 @@
 				</div>
 			</div>
 	  </div>
-	<div class='color-white text-center net-error' >{{ 'No network connection!' | langTranslate: appConvertedLang['No_network_connection'] }}</div>	
+	<div class='color-white text-center net-error' >{{ 'Sin Conexi&oacute;n de Internet!' | langTranslate: appConvertedLang['No_network_connection'] }}</div>	
   </ion-content>
 </ion-view>
