--- a/templates/main-landing.html
+++ b/templates/main-landing.html
@@ -87,14 +87,14 @@
             </div>
     </ion-scroll>
 	  </div>
-	  <div class='color-white text-center net-error' >{{ 'No network connection!' | langTranslate: appConvertedLang['No_network_connection'] }}</div>	
+	  <div class='color-white text-center net-error' >{{ 'Sin Conexión a internet!' | langTranslate: appConvertedLang['No_network_connection'] }}</div>	
   </ion-content>
     
 	<ion-footer-bar class="bg-dark" >
-<!--		<div class='footer-box bg-dark color-yellow' ng-show='pop_status == false'>
+		<div class='footer-box bg-dark color-yellow' ng-show='pop_status == false'>
 			<div class='w-50-p pull-left my-button h-100-p text-center border-r-yellow' ng-click='ride("later")'>{{ 'RIDE LATER' | langTranslate: appConvertedLang['RIDE_LATER'] }}</div>
 			<div class='w-50-p pull-left my-button h-100-p text-center'  ng-click='ride("now")'>{{ 'RIDE NOW' | langTranslate: appConvertedLang['RIDE_NOW'] }}</div>
-		</div> -->
+		</div> 
 		
 		<div class='footer-box bg-dark color-yellow' ng-show='pop_status == true'>
 			<div class='w-100-p my-button h-100-p text-center border-r-yellow'  ng-click='cancel()' >{{ 'Cancel' | langTranslate: appConvertedLang['Cancel'] }}</div>
