--- a/templates/main-landing.html
+++ b/templates/main-landing.html
@@ -2,7 +2,7 @@
 <ion-view>
 	
 	<ion-nav-title>
-	 <div class='color-yellow text-center'><img ng-src='img/logo2.png' style='height: 100%' /></div>
+	 <div class='color-yellow text-center'><img ng-src='img/logo2.png' style='height: 25%; width: 25%' /></div>
   </ion-nav-title>
 	
 	<ion-content  scroll='false' drag-content="false">
