--- a/templates/rate-card.html
+++ b/templates/rate-card.html
@@ -19,18 +19,18 @@
 						<div style='padding-left:20px;'>
 							<div class="row p-top-5 b-border-light">
 									<div class="col  p-10 col-center" >
-										<p class='color-gery no-margin'>{{ 'First' | langTranslate: appConvertedLang['First'] }} {{item.intialkm}} kms</p>
+										<p class='color-gery no-margin'>Primeros {{item.intialkm}} kms</p>
 									</div>
 									<div class="col   p-10 text-right col-center" >
-										<span class='color-yellow'>$</span> <span class='color-gery'>{{item.intailrate}} per km</span>
+										<span class='color-yellow'>$</span> <span class='color-gery'>{{item.intailrate}} por km</span>
 									</div>
 							</div>
 							<div class="row p-top-5 b-border-light">
 									<div class="col  p-10 col-center" >
-										<p class='color-gery no-margin'>{{ 'After' | langTranslate: appConvertedLang['After'] }} {{item.intialkm}} kms</p>
+										<p class='color-gery no-margin'>Luego de los primeros {{item.intialkm}} kms</p>
 									</div>
 									<div class="col   p-10 text-right col-center" >
-										<span class='color-yellow'>$</span> <span class='color-gery'>{{item.standardrate}} per km</span>
+										<span class='color-yellow'>$</span> <span class='color-gery'>{{item.standardrate}} por km</span>
 									</div>
 							</div>
 						</div>
