Fixeo landing y test camara

--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -83,6 +83,10 @@
 						<img class='input-icon icon-20' src='img/icons/lockTick.png'/>
 					</div>
 					
+					<input onclick='capturePhoto()' ng-click='capturePhoto()'  class='btn bg-yellow color-white big-font m-top-20' type='button' value="{{ 'SIGN UP' | langTranslate: appConvertedLang['SIGN_UP'] }}" /> 
+					
+					</br>
+					
 					<input ng-click='do_signUp(sign_up_form)'  class='btn bg-yellow color-white big-font m-top-20' type='button' value="{{ 'SIGN UP' | langTranslate: appConvertedLang['SIGN_UP'] }}" /> 
 					
 				</div>	
