--- a/templates/rate-card.html
+++ b/templates/rate-card.html
@@ -19,18 +19,76 @@
 						<div style='padding-left:20px;'>
 							<div class="row p-top-5 b-border-light">
 									<div class="col  p-10 col-center" >
-										<p class='color-gery no-margin'>Primeros {{item.intialkm}} kms</p>
+										<p class='color-gery no-margin'>Aeropuerto/Tray&eacute;cto</p>
 									</div>
 									<div class="col   p-10 text-right col-center" >
-										<span class='color-yellow'>$</span> <span class='color-gery'>{{item.intailrate}} por km</span>
+										<span class='color-yellow'>$</span> <span class='color-gery'>{{item.aerotray}}</span>
 									</div>
 							</div>
 							<div class="row p-top-5 b-border-light">
 									<div class="col  p-10 col-center" >
-										<p class='color-gery no-margin'>Luego de los primeros {{item.intialkm}} kms</p>
+										<p class='color-gery no-margin'>Recogida en Aeropuerto con Recepci&oacute;n</p>
 									</div>
 									<div class="col   p-10 text-right col-center" >
-										<span class='color-yellow'>$</span> <span class='color-gery'>{{item.standardrate}} por km</span>
+										<span class='color-yellow'>$</span> <span class='color-gery'>{{item.aeroreco}}</span>
+									</div>
+							</div>
+							<div class="row p-top-5 b-border-light">
+									<div class="col  p-10 col-center" >
+										<p class='color-gery no-margin'>Disponibilidad 8 Hrs en Bogot&aacute;</p>
+									</div>
+									<div class="col   p-10 text-right col-center" >
+										<span class='color-yellow'>$</span> <span class='color-gery'>{{item.disp8}}</span>
+									</div>
+							</div>							
+							<div class="row p-top-5 b-border-light">
+									<div class="col  p-10 col-center" >
+										<p class='color-gery no-margin'>Disponibilidad 12 Hrs en Bogot&aacute;</p>
+									</div>
+									<div class="col   p-10 text-right col-center" >
+										<span class='color-yellow'>$</span> <span class='color-gery'>{{item.disp12}}</span>
+									</div>
+							</div>
+							<div class="row p-top-5 b-border-light">
+									<div class="col  p-10 col-center" >
+										<p class='color-gery no-margin'>Disponibilidad 24 Hrs en Bogot&aacute;</p>
+									</div>
+									<div class="col   p-10 text-right col-center" >
+										<span class='color-yellow'>$</span> <span class='color-gery'>{{item.disp24}}</span>
+									</div>
+							</div>
+							<div class="row p-top-5 b-border-light">
+									<div class="col  p-10 col-center" >
+										<p class='color-gery no-margin'>Andr&eacute;s Chia por Guaymaral</p>
+										<p class='color-gery no-margin'>(Ida y regreso con 2 puntos de recogida y regreso puerto a puerta dentro de per&iacute;metro establecido)</p>
+									</div>
+									<div class="col   p-10 text-right col-center" >
+										<span class='color-yellow'>$</span> <span class='color-gery'>{{item.achiag}}</span>
+									</div>
+							</div>
+							<div class="row p-top-5 b-border-light">
+									<div class="col  p-10 col-center" >
+										<p class='color-gery no-margin'>Andr&eacute;s Chia por la Autopista Norte</p>
+										<p class='color-gery no-margin'>(Ida y regreso con 2 puntos de recogida y regreso puerto a puerta dentro de per&iacute;metro establecido)</p>
+									</div>
+									<div class="col   p-10 text-right col-center" >
+										<span class='color-yellow'>$</span> <span class='color-gery'>{{item.achian}}</span>
+									</div>
+							</div>
+							<div class="row p-top-5 b-border-light">
+									<div class="col  p-10 col-center" >
+										<p class='color-gery no-margin'>City Tour</p>
+									</div>
+									<div class="col   p-10 text-right col-center" >
+										<span class='color-yellow'>$</span> <span class='color-gery'>{{item.citytour}}</span>
+									</div>
+							</div>
+							<div class="row p-top-5 b-border-light">
+									<div class="col  p-10 col-center" >
+										<p class='color-gery no-margin'>Tour Sabana (3 Lugares);</p>
+									</div>
+									<div class="col   p-10 text-right col-center" >
+										<span class='color-yellow'>$</span> <span class='color-gery'>{{item.sabana}}</span>
 									</div>
 							</div>
 						</div>
