--- a/templates/menu.html
+++ b/templates/menu.html
@@ -64,16 +64,16 @@
 						<i class="icon ion-ios-arrow-forward f-size-25 color-d-gery"></i>
 				  </a>
 				  
-				 <!--  <a class="item item-icon-left item-icon-right color-gery " href="#">
+				  <!-- <a class="item item-icon-left item-icon-right color-gery " href="#">
 						<i class="icon ion-social-usd f-size-25 color-d-gery"></i>
-							Payments
+							
 						<i class="icon ion-ios-arrow-forward  f-size-25 color-d-gery"></i>
-				  </a>
-				 <a class="item item-icon-left item-icon-right color-gery no-border " href="#">
+				  </a>-->
+				  <a menu-close mainmenu  ng-click='load_perim()' class="item item-icon-left item-icon-right color-gery " href="#/app/landing">
 					<i class="icon ion-pricetags f-size-25 color-d-gery"></i>
-					Offers & Free Rides
+					Per&iacute;metro
 					<i class="icon ion-ios-arrow-forward f-size-25 color-d-gery"></i>
-				  </a> -->
+				  </a> 
 					
 				</div>
 			</div>
