--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -83,7 +83,7 @@
 						<img class='input-icon icon-20' src='img/icons/lockTick.png'/>
 					</div>
 					
-					<input onclick='capturePhoto()' ng-click='capturePhoto()'  class='btn bg-yellow color-white big-font m-top-20' type='button' value="FOTO de ID o C&eacute;dula" /> 
+					<input onclick='capturePhoto()' ng-click='capturePhoto()'  class='btn bg-yellow color-white big-font m-top-20' type='button' value="Tomar FOTO de ID" /> 
 					
 					</br>
 					
