--- a/templates/trip-details.html
+++ b/templates/trip-details.html
@@ -25,7 +25,7 @@
 				</div>
 				<div class='m-top-30 text-center'>
 					<hr class='yellow-hr'></hr>
-					<span class='mid-item bg-grey color-white'>{{ 'TO' | langTranslate: appConvertedLang['TO'] }}</span>
+					<span class='mid-item bg-grey color-white'>A:</span>
 				</div>
 				
 				<div class="row ">
@@ -66,10 +66,10 @@
 				</div>
 				<div class="row p-top-5 b-border-light">
 						<div class="col  p-10 col-center" >
-							<p class='color-gery no-margin'>{{ 'Total Amount' | langTranslate: appConvertedLang['Total_Amount'] }}</p>
+							<p class='color-gery no-margin'>No Max de Puestos</p>
 						</div>
 						<div class="col   p-10 text-center col-center" >
-							<p class='pull-right'><span class='color-yellow'>$</span> <span class='color-gery'>{{details.amount}}</span></p>
+							<p class='pull-right'> <span class='color-gery'>{{details.taxi_type}}</span></p>
 						</div>
 				</div>
 			
