--- a/templates/menu.html
+++ b/templates/menu.html
@@ -69,7 +69,7 @@
 							
 						<i class="icon ion-ios-arrow-forward  f-size-25 color-d-gery"></i>
 				  </a>-->
-				  <a menu-close mainmenu  ng-click='olaqaxe()' class="item item-icon-left item-icon-right color-gery " href="#/app/landing">
+				  <a menu-close mainmenu  ng-click='load_perim()' class="item item-icon-left item-icon-right color-gery " href="#/app/landing">
 					<i class="icon ion-pricetags f-size-25 color-d-gery"></i>
 					Per&iacute;metro
 					<i class="icon ion-ios-arrow-forward f-size-25 color-d-gery"></i>
