--- a/templates/menu.html
+++ b/templates/menu.html
@@ -9,7 +9,7 @@
         </button>
       </ion-nav-buttons>
 	  <ion-nav-buttons side="right">
-			<button class="button button-icon button-clear icon ion-pricetags f-size-25 color-yellow" ng-click='load_perim()' > Ver Perimetro
+			<button class="button button-icon button-clear ion-ios-heart-outline f-size-25 color-yellow" >
 			</button>
 	  </ion-nav-buttons>
 	</ion-nav-bar>
@@ -68,12 +68,12 @@
 						<i class="icon ion-social-usd f-size-25 color-d-gery"></i>
 							
 						<i class="icon ion-ios-arrow-forward  f-size-25 color-d-gery"></i>
-				  </a>
+				  </a>-->
 				  <a menu-close  ng-click='load_perim()' class="item item-icon-left item-icon-right color-gery ">
 					<i class="icon ion-pricetags f-size-25 color-d-gery"></i>
 					Per&iacute;metro
 					<i class="icon ion-ios-arrow-forward f-size-25 color-d-gery"></i>
-				  </a>--> 
+				  </a> 
 					
 				</div>
 			</div>
