Ajustes primera versión

--- a/templates/main-landing.html
+++ b/templates/main-landing.html
@@ -41,13 +41,13 @@
 				<div class='head-box text-center'>
 					<div class='vertical-middle'>
 						<span class='color-yellow d-block '>{{selected_cab.cartype}}</span>
-						<span class='color-gery d-block'>Elija el no de puestos que requiere</span>
+						<span class='color-gery d-block'>Elija el # de puestos que requiere y haga click en el plan para conocer la tar&iacute;fa</span>
 					</div>
 				</div>
 			
 				<div id='fare-breakup-box' class='text-center'>
 					<div class='head'>
-						<span >{{ 'Fare Breakup' | langTranslate: appConvertedLang['Fare_Breakup'] }}</span>
+						<span >{{ 'Fare Breakup' | langTranslate: appConvertedLang['Fare_Breakup'] }} <b><span class='color-yellow f-size-20'> {{tarifa_actual}} </span> </b></span>
 					</div>
 					<!-- {{end_box}} -->
 					<div class="row ">
@@ -63,7 +63,7 @@
 								<p class='color-gery'>Recepci&oacute;n Aerop</p>
 							</div>
 						</div>
-						<div class="item-rate col col-33 no-border">
+						<div class="item-rate col col-33">
 							<div class='vertical-middle'>
 								<p class='color-gery'><b><span class='color-yellow f-size-20'>$ </span>{{selected_cab.disp8}}</b></p>
 								<p class='color-gery'>Disponibilidad 8 Horas Bta</p>
@@ -72,7 +72,7 @@
 					</div>
 						
 					<div class="row ">
-						<div class="item-rate col col-33 no-border">
+						<div class="item-rate col col-33">
 							<div class='vertical-middle'>
 								<p class='color-gery'><b><span class='color-yellow f-size-20'>$ </span>{{selected_cab.disp12}}</b></p>
 								<p class='color-gery'>Disponibilidad 12 Horas Bta</p>
@@ -84,7 +84,7 @@
 								<p class='color-gery'>Disponibilidad 24 Horas Bta</p>
 							</div>
 						</div>
-						<div class="item-rate col col-33 no-border">
+						<div class="item-rate col col-33">
 							<div class='vertical-middle'>
 								<p class='color-gery'><b><span class='color-yellow f-size-20'>$ </span>{{selected_cab.achiag}}</b></p>
 								<p class='color-gery'>Andres Ch&iacute;a x Guaymaral</p>
@@ -93,21 +93,19 @@
 					</div>
 					
 					<div class="row ">
-						<div class="item-rate col col-33 no-border">
+						<div class="item-rate col col-33">
 							<div class='vertical-middle'>
-								<p class='color-gery'><b><span class='color-yellow f-size-20'>$ </span>{{selected_cab.disp12}}</b></p>
+								<p class='color-gery'><b><span class='color-yellow f-size-20'>$ </span>{{selected_cab.achian}}</b></p>
 								<p class='color-gery'>Andres Ch&iacute;a x autonorte</p>
 							</div>
 						</div>
 						<div class="item-rate col col-33">
-							<div class='vertical-middle'>
-								<p class='color-gery'><b><span class='color-yellow f-size-20'>$ </span>{{selected_cab.disp24}}</b></p>
+							<div class='vertical-middle'  ng-click='clicked_precio({{selected_cab.citytour}})'>
 								<p class='color-gery'>CityTour</p>
 							</div>
 						</div>
-						<div class="item-rate col col-33 no-border">
-							<div class='vertical-middle'>
-								<p class='color-gery'><b><span class='color-yellow f-size-20'>$ </span>{{selected_cab.achiag}}</b></p>
+						<div class="item-rate col col-33">
+							<div class='vertical-middle' ng-click='clicked_precio(${{selected_cab.sabana}})'>
 								<p class='color-gery'>Tour de La Sabana</p>
 							</div>
 						</div>
@@ -135,7 +133,7 @@
     
 	<ion-footer-bar class="bg-dark" >
 		<div class='footer-box bg-dark color-yellow' ng-show='pop_status == false'>
-			<div class='w-100-p pull-left my-button h-100-p text-center ' ng-click='ride("later")'>RESERVAR VAN</div>
+			<div class='w-100-p pull-left my-button h-100-p text-center ' ng-click='ride("later")'>RESERVAR</div>
 		</div> 
 		
 		<div class='footer-box bg-dark color-yellow' ng-show='pop_status == true'>
