--- a/templates/main-landing.html
+++ b/templates/main-landing.html
@@ -41,31 +41,28 @@
 				<div class='head-box text-center'>
 					<div class='vertical-middle'>
 						<span class='color-yellow d-block '>{{selected_cab.cartype}}</span>
-						<span class='color-gery d-block'>Elija el # de puestos que requiere y haga click en el plan para conocer la tar&iacute;fa</span>
+						<span class='color-gery d-block'>Elija el # de puestos que requiere</span>
 					</div>
 				</div>
 			
 				<div id='fare-breakup-box' class='text-center'>
 					<div class='head'>
-						<span >{{ 'Fare Breakup' | langTranslate: appConvertedLang['Fare_Breakup'] }} <b><span class='color-yellow f-size-20'> {{tarifa_actual}} </span> </b></span>
+						<span >{{ 'Fare Breakup' | langTranslate: appConvertedLang['Fare_Breakup'] }} <b><span class='color-yellow f-size-20'>$ {{tarifa_actual}} </span> </b></span>
 					</div>
 					<!-- {{end_box}} -->
 					<div class="row ">
 						<div class="item-rate col col-33">
-							<div class='vertical-middle'>
-								<p class='color-gery'><b><span class='color-yellow f-size-20'>$ </span> {{selected_cab.aerotray}}</b></p>
+							<div class='vertical-middle' ng-click='clicked_precio("aerotray")'>
 								<p class='color-gery'>Aeropuerto</p>
 							</div>
 						</div>
 						<div class="item-rate col col-33">
-							<div class='vertical-middle'>
-								<p class='color-gery'><b><span class='color-yellow f-size-20'>$ </span>{{selected_cab.aeroreco}}</b></p>
+							<div class='vertical-middle' ng-click='clicked_precio("aeroreco")'>
 								<p class='color-gery'>Recepci&oacute;n Aerop</p>
 							</div>
 						</div>
-						<div class="item-rate col col-33">
-							<div class='vertical-middle'>
-								<p class='color-gery'><b><span class='color-yellow f-size-20'>$ </span>{{selected_cab.disp8}}</b></p>
+						<div class="item-rate col col-33 no-border">
+							<div class='vertical-middle' ng-click='clicked_precio("disp8")'>
 								<p class='color-gery'>Disponibilidad 8 Horas Bta</p>
 							</div>
 						</div>
@@ -73,20 +70,17 @@
 						
 					<div class="row ">
 						<div class="item-rate col col-33">
-							<div class='vertical-middle'>
-								<p class='color-gery'><b><span class='color-yellow f-size-20'>$ </span>{{selected_cab.disp12}}</b></p>
+							<div class='vertical-middle' ng-click='clicked_precio("disp12")'>
 								<p class='color-gery'>Disponibilidad 12 Horas Bta</p>
 							</div>
 						</div>
 						<div class="item-rate col col-33">
-							<div class='vertical-middle'>
-								<p class='color-gery'><b><span class='color-yellow f-size-20'>$ </span>{{selected_cab.disp24}}</b></p>
+							<div class='vertical-middle' ng-click='clicked_precio("disp24")'>
 								<p class='color-gery'>Disponibilidad 24 Horas Bta</p>
 							</div>
 						</div>
-						<div class="item-rate col col-33">
-							<div class='vertical-middle'>
-								<p class='color-gery'><b><span class='color-yellow f-size-20'>$ </span>{{selected_cab.achiag}}</b></p>
+						<div class="item-rate col col-33 no-border">
+							<div class='vertical-middle' ng-click='clicked_precio("achiag")'>
 								<p class='color-gery'>Andres Ch&iacute;a x Guaymaral</p>
 							</div>
 						</div>
@@ -94,24 +88,23 @@
 					
 					<div class="row ">
 						<div class="item-rate col col-33">
-							<div class='vertical-middle'>
-								<p class='color-gery'><b><span class='color-yellow f-size-20'>$ </span>{{selected_cab.achian}}</b></p>
+							<div class='vertical-middle' ng-click='clicked_precio("achian")'>
 								<p class='color-gery'>Andres Ch&iacute;a x autonorte</p>
 							</div>
 						</div>
-						<div class="item-rate col col-33">
-							<div class='vertical-middle'  ng-click='clicked_precio({{selected_cab.citytour}})'>
+						<div class="item-rate col col-33 no-border">
+							<div class='vertical-middle' ng-click='clicked_precio("citytour")'>
 								<p class='color-gery'>CityTour</p>
 							</div>
 						</div>
 						<div class="item-rate col col-33">
-							<div class='vertical-middle' ng-click='clicked_precio(${{selected_cab.sabana}})'>
+							<div class='vertical-middle' ng-click='clicked_precio("sabana")'>
 								<p class='color-gery'>Tour de La Sabana</p>
 							</div>
 						</div>
 					</div>	
 																												
-					<p class='color-gery f-size-12 p10'>Más info y per&iacute;metro en el menu principal</p>
+					<p class='color-gery f-size-12 p10'>Haga click en el plan para conocer la tar&iacute;fa <br> Más info y per&iacute;metro en el menu principal</p>
 				</div>
 				
 			</div>
