--- a/templates/main-landing.html
+++ b/templates/main-landing.html
@@ -52,17 +52,17 @@
 					<!-- {{end_box}} -->
 					<div class="row ">
 						<div class="item-rate col col-33">
-							<div class='vertical-middle' ng-click='clicked_precio("aerotray")'>
+							<div class='vertical-middle' ng-click='clicked_precio(0)'>
 								<p class='color-gery'>Aeropuerto</p>
 							</div>
 						</div>
 						<div class="item-rate col col-33">
-							<div class='vertical-middle' ng-click='clicked_precio("aeroreco")'>
+							<div class='vertical-middle' ng-click='clicked_precio(1)'>
 								<p class='color-gery'>Recepci&oacute;n Aerop</p>
 							</div>
 						</div>
 						<div class="item-rate col col-33 no-border">
-							<div class='vertical-middle' ng-click='clicked_precio("disp8")'>
+							<div class='vertical-middle' ng-click='clicked_precio(2)'>
 								<p class='color-gery'>Disponibilidad 8 Horas Bta</p>
 							</div>
 						</div>
@@ -70,17 +70,17 @@
 						
 					<div class="row ">
 						<div class="item-rate col col-33">
-							<div class='vertical-middle' ng-click='clicked_precio("disp12")'>
+							<div class='vertical-middle' ng-click='clicked_precio(3)'>
 								<p class='color-gery'>Disponibilidad 12 Horas Bta</p>
 							</div>
 						</div>
 						<div class="item-rate col col-33">
-							<div class='vertical-middle' ng-click='clicked_precio("disp24")'>
+							<div class='vertical-middle' ng-click='clicked_precio(4)'>
 								<p class='color-gery'>Disponibilidad 24 Horas Bta</p>
 							</div>
 						</div>
 						<div class="item-rate col col-33 no-border">
-							<div class='vertical-middle' ng-click='clicked_precio("achiag")'>
+							<div class='vertical-middle' ng-click='clicked_precio(5)'>
 								<p class='color-gery'>Andres Ch&iacute;a x Guaymaral</p>
 							</div>
 						</div>
@@ -88,17 +88,17 @@
 					
 					<div class="row ">
 						<div class="item-rate col col-33">
-							<div class='vertical-middle' ng-click='clicked_precio("achian")'>
+							<div class='vertical-middle' ng-click='clicked_precio(6)'>
 								<p class='color-gery'>Andres Ch&iacute;a x autonorte</p>
 							</div>
 						</div>
-						<div class="item-rate col col-33 no-border">
-							<div class='vertical-middle' ng-click='clicked_precio("citytour")'>
+						<div class="item-rate col col-33">
+							<div class='vertical-middle' ng-click='clicked_precio(7)'>
 								<p class='color-gery'>CityTour</p>
 							</div>
 						</div>
-						<div class="item-rate col col-33">
-							<div class='vertical-middle' ng-click='clicked_precio("sabana")'>
+						<div class="item-rate col col-33 no-border">
+							<div class='vertical-middle' ng-click='clicked_precio(8)'>
 								<p class='color-gery'>Tour de La Sabana</p>
 							</div>
 						</div>
