--- a/templates/trip-details.html
+++ b/templates/trip-details.html
@@ -48,7 +48,9 @@
 						</div>
 						<div class="col  p-10 text-center" >
 							<p class='color-white p-head '>{{ 'DRIVER DETAILS' | langTranslate: appConvertedLang['DRIVER_DETAILS'] }}</p>
-							<p class='color-gery'>{{details.assigned_for}}{{$rootScope.Driver.name}}{{$rootScope.Driver.phone}}{{$rootScope.Driver.car_no}}</p>
+							<p class='color-gery'>Nombre: {{$rootScope.Driver.name}}</p>
+							<p class='color-gery'>Celular: {{$rootScope.Driver.phone}}</p>
+							<p class='color-gery'>Placa: {{$rootScope.Driver.car_no}}</p>
 						</div>
 			</div>
 			
